--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ tbody tr td:first-of-type .remove {
     left: calc(var(--size)/-1.5);
     
     /*Aligns text content to the center*/
-    display: grid;
+    display: none; /*changes to grid in javascript*/
     justify-content: center;
     align-content: center;
     /*...*/
