Make table only appear after a row has been submitted and make it so read check only appears when a read cell is hovered

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ main button#book-adder {
 table {
     border: 2px solid black;
     border-collapse: collapse;
+    display: none;
 }
 
 col.read-col{
