--- a/style.css
+++ b/style.css
@@ -39,9 +39,11 @@ main h1 svg {
 }
 
 main button#book-adder {
-    width: 1.5em;
-    height: 1.5em;
-    font-size: 1.4em;
+    box-sizing: content-box;
+    width: 1em;
+    height: 1em;
+    padding: 5px;
+    font-size: 2em;
     border-radius: 50%;
 
     align-self: flex-end;
