--- a/style.css
+++ b/style.css
@@ -38,6 +38,13 @@ main h1 svg {
     width: 1.5em;
 }
 
+main .book-tracker {
+    background-color: gainsboro;
+    min-width: 2em;
+    text-align: center;
+    display: inline-block;
+}
+
 main button#book-adder {
     box-sizing: content-box;
     width: 1em;
@@ -59,6 +66,7 @@ table {
     border-spacing: 0;
     border-collapse: separate;
     border: 2px solid hsl(0, 2%, 88%); 
+    background-color: hsl(0, 2%, 88%); /*Prevents white space/gaps between the top corners and that header background */
     border-radius: var(--corner-radius);
     display: none; 
 }
